# ThemeGeneratorHelper

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ANDROID_ROADMAP.md  ARCHITECTURE.md  SECURITY.md  THEME_SCHEMA.md
examples/: theme.json
scripts/: check.sh
src/makeetheme/: __init__.py  assets_payload.py  cli.py  models.py  png.py  server.py
src/makeetheme/android/: __init__.py  resources.py
src/makeetheme/ios/: __init__.py  assets.py  css.py  exporter.py
tests/: test_ios_export.py  test_png.py
web/: app.js  index.html  styles.css
