[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "makeetheme"
version = "0.1.0"
description = "No-code user theme builder MVP: iOS .ktheme generator and Android resource export."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MAKEETHEME" }]
dependencies = []

[project.scripts]
makeetheme = "makeetheme.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
